--- a/index.html
+++ b/index.html
@@ -1,9 +1,75 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>This is a test</title>
+        <title>Learning</title>
+        <style>
+            body {
+                background-color: rgb(255, 255, 255);
+                color: white;
+                font-family: Georgia, 'Times New Roman', Times, serif;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+                font-size: larger;
+                background-image: url(https://www.lockheedmartin.com/content/dam/lockheed-martin/aero/photo/f22/F-22-Squadron.png);
+            }
+            header {
+                color: rgb(255, 255, 255);
+                margin: auto;
+                font-size:larger;
+            }
+                nav {
+                    background: rgb(255, 255, 255);
+                    display: flex;
+                    flex-direction: row;
+                    margin: 5px 12.5px 5px 5px;
+                    border-radius: 10px;
+                    font-size: larger;
+                }
+                    ul {
+                        margin: auto;
+                        list-style-type: none;
+                    }
+                    li {
+                        display:inline-block;
+                        margin: 10px 100px 10px 100px;
+                    }
+                        button {
+                            background: rgb(255, 255, 255);
+                            border: rgb(255, 255, 255);
+                            color: rgb(0, 0, 0);
+                            font-size: larger;
+                        }
+            section {
+                color: rgb(255, 255, 255);
+                padding: 20px;
+                display: flex;
+                flex-direction: row;
+                margin: auto;
+                padding: 10px 100px 10px 100px;
+                font-size:large;
+                font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+            }
+            footer {
+                color: rgb(255, 255, 255);
+                padding: 10px 20px;
+                margin: auto;
+            }
+        </style>
     </head>
     <body>
-        
+        <nav>
+            <ul>
+                <li><button>Home</button></li>
+                <li><button>Links</button></li>
+                <li><button>Login</button></li>
+            </ul>
+        </nav>
+        <header>
+            <h1>That Plane Person Home</h1>
+        </header>
+        <section><h2>If you navigate to the Links page of this site you will find a collection of different aircraft downloads for DCS. <br> Including but is not limited to the F-35, F-22, F-16, YF-12 and F-18</h2></section>
+        <footer><h3></h3></footer>
     </body>
 </html>
