--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Learning</title>
+        <title>That Plane Person</title>
         <style>
             body {
                 background-color: rgb(255, 255, 255);
